[package]
name = "riddance"
version = "0.1.1"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
edition = "2021"
description = "retiring, recyclable, reservable IDs"
documentation = "https://docs.rs/riddance"
repository = "https://github.com/oconnor663/riddance"
license = "MIT OR Apache-2.0"
keywords = ["slotmap", "arena", "registry", "id", "generation"]

[dependencies]
hashbrown = "0.14.3"
typenum = { version = "1.17.0", features = ["const-generics"] }
